# nure_tools_rs

./: Cargo.toml  README.md
src/: errors.rs  groups.rs  lecture_rooms.rs  lib.rs  main.rs  schedule.rs  teachers.rs  utils.rs
