[package]
name = "nure_tools"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "mindenit API wrapper"
homepage = "https://github.com/SoappGuy/nure_tools_rs"
repository = "https://github.com/SoappGuy/nure_tools_rs"
readme = "README.md"
exclude = [
    ".vscode/",
    "src/main.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.5"
color-eyre = "0.6.2"
dateparser = "0.2.1"
regex = "1.10.2"
reqwest = {version = "0.11.23", features = ["blocking", "json"]}
serde_json = "1.0.111"
